2022-12-01T16:30:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3594539635 # 664
* notice: last 14d: unq all: 2 18
* notice: prev accum: outdated-unq outdated-all / unq all: 402 636 / 414 656
* notice: next accum: outdated-unq outdated-all / unq all: 404 639 / 414 657
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-17] / []

2022-12-01T08:26:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3590805329 # 663
* notice: last 14d: unq all: 3 20
* notice: prev accum: outdated-unq outdated-all / unq all: 402 636 / 414 657
* notice: next accum: outdated-unq outdated-all / unq all: 402 636 / 414 656
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -0 -1 / 2 2
* notice: removed / changed dates: [] / [2022-11-17]

2022-11-30T16:29:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3585184108 # 661
* notice: last 14d: unq all: 3 21
* notice: prev accum: outdated-unq outdated-all / unq all: 401 634 / 414 656
* notice: next accum: outdated-unq outdated-all / unq all: 402 636 / 414 657
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-16] / []

2022-11-30T08:26:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3581557732 # 660
* notice: last 14d: unq all: 3 22
* notice: prev accum: outdated-unq outdated-all / unq all: 401 634 / 414 657
* notice: next accum: outdated-unq outdated-all / unq all: 401 634 / 414 656
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-11-16]

2022-11-29T16:29:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3576047214 # 658