@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-12-01T16:30:12Z",
+  "timestamp" : "2022-12-02T08:23:57Z",
   "count_outdated" : 639,
   "uniques_outdated" : 404,
-  "count" : 657,
+  "count" : 656,
   "uniques" : 414,
   "clones" : [
     {
       "timestamp": "2022-11-18T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
