@@ -1,3 +1,11 @@
+2022-12-02T08:23:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3600068402 # 666
+* notice: last 14d: unq all: 2 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 404 639 / 414 657
+* notice: next accum: outdated-unq outdated-all / unq all: 404 639 / 414 656
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-11-18]
+
 2022-12-01T16:30:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3594539635 # 664
 * notice: last 14d: unq all: 2 18
